// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`bookmarks create 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "291",
    "content-type": "application/json",
    "host": "transfer.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "data": {
      "attributes": {
        "name": "35-KS&aIO(Fcdm%Y:2-c\\fp>(>[]i+R3*G'%imO1VoV;y-@QogK\`.;xr:3<\`B\\?kNH*$]_Lup",
        "path": "XQE%qoM~mcP)TI f]RJ*#r-GDy~c\\N/",
        "pinned": false,
      },
      "relationships": {
        "collection": {
          "data": {
            "id": "3fa85f64-5717-4562-b3fc-2c963f66afa6",
            "type": "Collection",
          },
        },
      },
      "type": "Bookmark",
    },
  },
  "method": "POST",
  "url": "https://transfer.api.globus.org/v2/bookmark",
}
`;

exports[`bookmarks get 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "transfer.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://transfer.api.globus.org/v2/bookmark/my-bookmark-id",
}
`;

exports[`bookmarks getAll 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "transfer.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://transfer.api.globus.org/v2/bookmarks",
}
`;

exports[`bookmarks remove 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "transfer.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "DELETE",
  "url": "https://transfer.api.globus.org/v2/bookmark/my-bookmark-id",
}
`;

exports[`bookmarks update 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "93",
    "content-type": "application/json",
    "host": "transfer.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "data": {
      "attributes": {
        "name": "New Name",
        "path": "new/path",
        "pinned": true,
      },
      "type": "Bookmark",
    },
  },
  "method": "PATCH",
  "url": "https://transfer.api.globus.org/v2/bookmark/my-bookmark-id",
}
`;
